2007-08-26  Tassilo Horn  <tassilo@member.fsf.org>

	* anything-config.el (anything-c-source-bookmarks): Require
	bookmark in init.

	Fix bug in info source that popped up another frame with
	pop-up-frames bound to t.

	Unbound C-r in anything-[isearch-]map.
	
2007-08-24  Tassilo Horn  <tassilo@member.fsf.org>

	* anything-config.el (anything-c-source-man-pages): Added
	condition-case for XEmacs which doesn't have `woman'.
	Added (volatile) to all sources, that assemble the list of
	candidates dynamically.
	Candidate man and info pages are only calculated once if that
	source really is used.  Thanks to Bill Clementson for the hint.

2007-08-23  Tassilo Horn  <tassilo@member.fsf.org>

	* anything-config.el (anything-c-source-google-suggest): Added new
	source: Google Suggestions.
	(anything-c-google-suggest-url): likewise.
	(anything-c-google-suggest-search-url): likewise.
	(anything-c-google-suggest-fetch): likewise.
	(anything-c-google-suggest-get-items): likewise.

2007-08-20  Tassilo Horn  <tassilo@member.fsf.org>

	* anything-config.el (anything-c-bbdb-name): New variable.  Holds
	the current anything-pattern, so that it doesn't get lost on TAB.
	(anything-c-bbdb-create-contact): Return actions unmodified, when
	the special "*Add to contacts*" entry is not selected.

2007-08-19  Tassilo Horn  <tassilo@member.fsf.org>

	* anything-config.el (anything-c-source-bbdb): Set current buffer
	to *BBDB* before selecting the current record.  Thanks to Bill
	Clementson for reporting this bug.
	(anything-c-boring-file-regexp): Add some boring file extensions
	like .class, .o, .la.
	(anything-type-attributes): Fix paren bug that prevented the
	candidate-transformer of files to be run.
	(anything-c-source-bbdb): If no contacts match the pattern, add a
	"*Add to contacts*" entry that adds the current pattern as a new
	contact.
	(anything-c-bbdb-create-contact): Add a new contact whose name is
	given by `anything-pattern'.

2007-08-13  Tassilo Horn  <tassilo@member.fsf.org>
